<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/white"

    >


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:foregroundGravity="left">

        <TextView
            android:id="@+id/cCourse"
            android:layout_width="52dp"
            android:layout_height="31dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tTask"
            android:layout_width="52dp"
            android:layout_height="31dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/dDesc"
            android:layout_width="52dp"
            android:layout_height="31dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/to_do"
            android:layout_width="52dp"
            android:layout_height="31dp"
            android:layout_gravity="right"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/imprima"
            android:gravity="right|top"
            android:letterSpacing="-0.05"
            android:text="@string/to_do"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/my_task"
            android:layout_width="83dp"
            android:layout_height="33dp"
            android:layout_gravity="top|center"
            android:fontFamily="@font/risque"
            android:letterSpacing="-0.05"
            android:text="@string/my_task"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="51dp"
            android:layout_height="34dp"
            android:layout_gravity="left"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/owl" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="280dp"
            android:layout_height="29dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/search"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="26dp"
                android:layout_height="22dp"
                android:layout_gravity="right"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/search2"
                tools:layout_editor_absoluteX="344dp"
                tools:layout_editor_absoluteY="68dp" />

            <TextView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:letterSpacing="-0.05"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.103"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="66dp" />
        </androidx.cardview.widget.CardView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="30dp" />

    <include layout = "@layout/bottom_sheet"/>




</androidx.coordinatorlayout.widget.CoordinatorLayout>